--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             date.setTime(date.getTime() + exp*24*60*60*1000);
             document.cookie = `${name}=${value};expires=${date.toUTCString()};path=/`;
         };
-        function getCookie(cname) {
+        function GetCookie(cname) {
             let name = cname + "=";
             let decodedCookie = decodeURIComponent(document.cookie);
             let ca = decodedCookie.split(';');
