--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">닫기</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="save">확인</button>
                       </div>
                   </div>
                 </div>
